@@ -368,6 +368,14 @@ int cdecl_parse_string( char const *s, size_t s_len ) {
   FILE *const temp_file = fmemopen( CONST_CAST( void*, s ), s_len, "r" );
   PERROR_EXIT_IF( temp_file == NULL, EX_IOERR );
   yyrestart( temp_file );
+
+  if ( opt_echo_commands && cdecl_initialized ) {
+    str_rtrim_len( s, &s_len );
+    FPRINTF( cdecl_fout,
+      "%s%.*s\n", cdecl_prompt[0], STATIC_CAST( int, s_len ), s
+    );
+  }
+
   int const status = yyparse() == 0 ? EX_OK : EX_DATAERR;
   PJL_IGNORE_RV( fclose( temp_file ) );
 
