@@ -68,6 +68,7 @@ static bool set_alt_tokens( set_option_fn_args_t const* ),
 #endif /* ENABLE_CDECL_DEBUG */
             set_digraphs( set_option_fn_args_t const* ),
             set_east_const( set_option_fn_args_t const* ),
+            set_echo_commands( set_option_fn_args_t const* ),
             set_explain_by_default( set_option_fn_args_t const* ),
             set_explicit_ecsu( set_option_fn_args_t const* ),
             set_explicit_int( set_option_fn_args_t const* ),
@@ -97,6 +98,7 @@ static set_option_t const SET_OPTIONS[] = {
   { "digraphs",           SET_OPTION_AFF_ONLY, false, &set_digraphs           },
   { "graphs",             SET_OPTION_NEG_ONLY, false, &set_digraphs           },
   { "east-const",         SET_OPTION_TOGGLE,   false, &set_east_const         },
+  { "echo-commands",      SET_OPTION_TOGGLE,   false, &set_echo_commands      },
   { "explain-by-default", SET_OPTION_TOGGLE,   false, &set_explain_by_default },
   { "explicit-ecsu",      SET_OPTION_TOGGLE,   true,  &set_explicit_ecsu      },
   { "explicit-int",       SET_OPTION_TOGGLE,   true,  &set_explicit_int       },
@@ -139,6 +141,7 @@ static void print_options( FILE *out ) {
   FPRINTF( out, "  %sdebug\n", maybe_no( opt_cdecl_debug ) );
 #endif /* ENABLE_CDECL_DEBUG */
   FPRINTF( out, "  %seast-const\n", maybe_no( opt_east_const ) );
+  FPRINTF( out, "  %secho-commands\n", maybe_no( opt_echo_commands ) );
   FPRINTF( out, "  %sexplain-by-default\n", maybe_no( opt_explain ) );
 
   if ( opt_explicit_ecsu != TB_NONE ) {
@@ -241,6 +244,17 @@ static bool set_east_const( set_option_fn_args_t const *args ) {
       C_LANG_WHICH( const )
     );
   }
+  return true;
+}
+
+/**
+ * Sets the echo-commands option.
+ *
+ * @param args The set option arguments.
+ * @return Returns `true` only if the option was set.
+ */
+static bool set_echo_commands( set_option_fn_args_t const *args ) {
+  opt_echo_commands = args->opt_enabled;
   return true;
 }
 
