@@ -3,6 +3,7 @@ option:
   [no]debug
   {di|tri|no}graphs
   [no]east-const
+  [no]echo-commands
   [no]explain-by-default
   [no]explicit-ecsu[={e|c|s|u}+]
   [no]explicit-int[=<types>]
